[gd_scene load_steps=11 format=2]

[ext_resource path="res://World/Props/Constructor/Constructor.png" type="Texture" id=1]
[ext_resource path="res://World/Props/Constructor/Constructor.gd" type="Script" id=2]
[ext_resource path="res://Managing/SoundManager.gd" type="Script" id=3]
[ext_resource path="res://Entities/Effects/EnemySpawnGrow.png" type="Texture" id=4]
[ext_resource path="res://World/Props/Constructor/DoneDing.wav" type="AudioStream" id=5]

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, -1.0, 0, 1, Vector2( 1, 0 ), -1.0, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 8.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 100.0
radial_accel_random = 1.0
tangential_accel = 30.9
damping = 40.96
scale = 0.2
scale_random = 0.13
scale_curve = SubResource( 5 )

[sub_resource type="Animation" id=1]
resource_name = "Construct"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.05 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "add_sparks"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Open"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 5.85634, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1.1, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "display_player"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Particles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Constructor" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -20 )
hframes = 6
vframes = 2
frame = 8

[node name="SparkSpawnPos" type="Position2D" parent="."]
position = Vector2( -20, -20 )

[node name="DingSFX" type="Node2D" parent="."]
script = ExtResource( 3 )
audio = ExtResource( 5 )
volumeMod = -8.0
bus = "SFX"

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 10, -13 )
z_index = 1
emitting = false
amount = 64
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource( 3 )
texture = ExtResource( 4 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Construct"
anims/Construct = SubResource( 1 )
anims/Open = SubResource( 2 )

[connection signal="timeout" from="SpawnTimer" to="." method="open_door"]
